[project]
name = "claude-voice-wrapper"
version = "0.1.0"
description = "Bidirectional voice interface for Claude Code: local Whisper STT in, ElevenLabs TTS out"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "faster-whisper",
    "elevenlabs",
    "sounddevice",
    "numpy",
    "pynput",
]

[project.scripts]
claude-voice = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
